syntax = "proto3";

package com.example.topmovieproto;

option java_multiple_files = true;

service TopMoviesService {
  rpc TopMovies(TopMoviesRequest) returns (TopMoviesResponse);
}

message TopMoviesRequest {

}

message TopMoviesResponse {
  repeated Rating rating = 1;
}

message Rating {
  string movieId = 1;
  int32 ratingVal = 2;
}